# reditop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs
.githooks/: pre-push
.github/workflows/: ci.yml
src/: app.rs  cli.rs  cluster.rs  column.rs  config.rs  default_columns.toml  discovery.rs  hotkeys.rs  lib.rs  main.rs  model.rs  overview.rs  parse.rs  poller.rs  registry.rs  target_addr.rs  topology.rs  tui.rs
src/columns/: calc.rs  info.rs  mod.rs
tests/: redis_integration.rs
