[package]
name = "reditop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.28"
humantime = "2.3"
ratatui = "0.29"
redis = { version = "0.32", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.27"
