[package]
name = "reditop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
humantime = "2.3"
indexmap = { version = "2.13", features = ["serde"] }
ratatui = "0.30"
redis = { version = "1.1", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = { version = "1.1", features = ["preserve_order"] }

[dev-dependencies]
tempfile = "3.27"
